<resources>
    <string name="app_name">银欣云</string>
    <string name="common_loading">加载中&#8230;</string>

    <string name="common_phone_input_hint">请输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>

    <string name="common_password_input_error">请输入密码</string>
    <string name="common_password_input_unlike">两次密码输入不一致，请重新输入</string>

    <string name="common_code_input_hint">请输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="common_code_error_hint">验证码错误，请检查输入</string>
    <string name="common_emil">邮箱输入不正确</string>
    <string name="common_owned_company">请选择所属公司</string>
    <string name="common_job">请选择岗位</string>


    <string name="update_title">发现新版本</string>
    <string name="update_notification_channel_id">update</string>
    <string name="update_notification_channel_name">升级通知</string>

    <string name="update_status_start">正在下载</string>
    <string name="update_status_running">下载中 %d%%</string>
    <string name="update_status_successful">下载完成，点击安装</string>
    <string name="update_status_failed">下载失败，点击重试</string>

    <!-- 选择对话框 -->
    <string name="select_min_hint">至少要选择 %d 项</string>
    <string name="select_max_hint">最多只能选择 %d 项</string>

    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>

    <!-- 登录 -->
    <string name="login_register">注册账号</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>
    <string name="login_title">手机号登录</string>
    <string name="login_other">其他登录方式</string>

    <!-- 加载中 -->
    <string name="http_loading">加载中&#8230;</string>

    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_token_error">登录失效，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>

    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_password_hint1">设置6&#8211;18位登录密码</string>
    <string name="register_password_hint2">请再次输入一次密码</string>
    <string name="register_uesr_name_hint">请输入姓名</string>
    <string name="register_e_mail_hint">请输入邮箱</string>
    <string name="register_e_mail">邮箱</string>
    <string name="register_company">选择所属公司:</string>
    <string name="register_company_hint">选择所属公司</string>
    <string name="register_uesr_name">姓名</string>
    <string name="register_uesr_gender">性别</string>
    <string name="register_select_uesr_gender">选择您的性别</string>
    <string name="register_password_2">确认密码:</string>
    <string name="register_password_1">密码:</string>
    <string name="register_code">验证码:</string>
    <string name="register_phone">手机号码:</string>
    <string name="register_job">岗位:</string>
    <string name="register_job_hint">选择岗位信息</string>
    <string name="register_service_object">选择服务对象公司:</string>
    <string name="register_service_object_hint">选择服务对象公司</string>
    <string name="register_device_administrator">设备管理员</string>
    <string name="register_proprietor">业主</string>

    <string name="opsmain_title">银欣云设备运维系统</string>

    <!--通用-->
    <string name="sign_out_of_account">退出账号</string>
    <string name="common_network_hint">当前没有网络连接，请检查网络设置</string>

    <string name="common_permission_alert">授权提醒</string>
    <string name="common_permission_fail_1">授权失败，请正确授予权限</string>
    <string name="common_permission_fail_2">获取权限失败，请手动授予权限</string>
    <string name="common_permission_fail_3">获取权限失败，请手动授予%s</string>
    <string name="common_permission_fail_4">没有授予后台定位权限，请您选择"始终允许"</string>
    <string name="common_permission_goto">前往授权</string>

    <string name="common_permission_calendar">日历权限</string>
    <string name="common_permission_camera">相机权限</string>
    <string name="common_permission_contacts">通讯录权限</string>
    <string name="common_permission_location">定位权限</string>
    <string name="common_permission_location_background">后台定位权限</string>
    <string name="common_permission_microphone">麦克风权限</string>
    <string name="common_permission_phone">电话权限</string>
    <string name="common_permission_call_log">通话记录权限</string>
    <string name="common_permission_sensors">身体传感器权限</string>
    <string name="common_permission_activity_recognition">健身运动权限</string>
    <string name="common_permission_sms">短信权限</string>
    <string name="common_permission_storage">存储权限</string>

    <string name="common_permission_install">安装应用权限</string>
    <string name="common_permission_notification">通知栏权限</string>
    <string name="common_permission_window">悬浮窗权限</string>
    <string name="common_permission_setting">系统设置权限</string>

    <string name="common_network_error">当前网络不可用，请检查网络设置</string>


    <!--用户信息管理-->
    <string name="user_info_title">用户信息管理</string>
    <string name="information_editing">信息编辑</string>
    <string name="change_password">密码修改</string>
    <string name="save">保存</string>
    <string name="confirm_to_modify">确定修改</string>
    <string name="owned_company">所属公司:</string>
    <string name="service_target_company">服务对象公司:</string>
    <string name="job">岗位:</string>
    <string name="name">姓名:</string>
    <string name="mail">电子邮箱:</string>
    <string name="gender">性别:</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="original_psw">原密码:</string>
    <string name="original_psw_hint">请输入原密码</string>
    <string name="new_psw">新密码:</string>
    <string name="new_psw_again">确认密码:</string>
    <string name="hint">欢迎:\u3000</string>

    <!--产品设备列表-->
    <string name="equipment_name">设备名称:</string>
    <string name="equipment_name_hint">请输入设备名称</string>
    <string name="company_name">公司名称:</string>
    <string name="current_state">当前状态:</string>
    <string name="equipment_type">设备类型:</string>
    <string name="inquire">查询</string>

    <!--我的维保工单-->
    <string name="device_model">设备型号:</string>
    <string name="device_model_hint">请输入设备型号</string>
    <string name="maintenance_order_number">维护单号:</string>
    <string name="maintenance_order_number_hint">请输入维护单号</string>

    <!--APP更新-->
    <string name="update_content">更新内容</string>
    <string name="update_no">下次再说</string>
    <string name="update_yes">立即更新</string>

    <!--报修工单-->
    <string name="repair_order_number">报修单号:</string>
    <string name="repair_order_number_hint">请输入报修单号</string>

    <!--关于-->
    <string name="about_title">公司介绍</string>
    <string name="about_copyright">Copyright © 2018 &#8211; 2022</string>
    <string name="about_text">上海银欣高新技术发展股份有限公司创立于1995年8月，2000年10月整体改制为股份有限公司。公司以“创造中国人科技”为企业的经营宗旨，以“节能减排、集成创新”为企业的经营目标，崇尚“仁义、礼、智、信”的经营管理理念，倡导构建绿色节能环保智能建筑，是一家专业为客户提供完整建筑智能化弱电系统工程及智能化节能减排改造服务的国内优秀高端系统集成商。\n
    公司专业提供建筑智能化系统（楼宇自控系统、消防系统、紧急广播系统、综合布线系统、程控交换机系统、卫星系统、有线电视系统、安保监控系统、门禁一卡通系统、可视对讲系统、车库管理系统及集成软件）、计算机信息系统（计算机系统、网络系统、数据库系统、网络安全、工具软件及应用软件）、节能产品及服务、以及相关应用管理软件的系统总体设计、系统工程安装调试、软件开发系统总集成、技术咨询和服务等全方位完整解决方案业务的优秀系统集成商。\n
    公司为上海市高新技术企业，通过了ISO9001-2015国际标准质量管理体系认证，具有建设部“建筑智能化工程专业承包壹级”、“工程设计甲级”和信息产业部“计算机信息系统集成叁级”等设计、施工和系统集成资质，以及上海市公安局技术防范办公室颁发的“壹级上海市公共安全防范工程设计施工单位”。公司是上海市第一批及国家第二批节能服务机构备案单位之一。公司现为中国建筑业协会智能建筑分会常务理事单位、上海市智能建筑建设协会理事单位、中国节能协会常务委员单位。公司拥有多项专利、软件著作权、软件产品登记、高新技术成果转化项目等自主知识产权。\n
    公司成立至今，已先后在金融、政府、电讯、教育、体育、卫生、政法、房地产等领域完成了数百个计算机信息系统、建筑智能化系统、建筑节能改造和应用管理软件项目，成为同行业中为数不多能为客户同时提供全面IT、IB、各类应用管理软件解决方案优秀系统集成商。\n
    把握机遇、以人为本、诚信务实、尊重科学、鼓励创新、追求卓越，倡导团队精神，扩大国际交流合作，建立战略联盟，实现跨越式发展。充分利用资本市场的融资优势，积极实行规模扩展战略。公司立志成为国内建筑智能化系统和完整节能减排技术服务的行业龙头企业之一，我们将不断为此而努力！</string>

    <!--访客登录页-->
    <string name="guest_detail">访客系统是可以使预约成功的访客直接在前台设备验证身份信息，\n\u3000\u3000\u3000\u3000\u3000\u3000\u3000无需人工验证，使通行更方便快捷</string>


</resources>
