<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_15"
            android:textColor="#333333"
            android:textSize="@dimen/sp_18"
            tools:text="欢迎：李先生" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signout"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/shape_signout_btn"
            android:text="@string/sign_out_of_account"
            android:textColor="#F63C56"
            android:textSize="@dimen/dp_16" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="7dp"
            android:text="@string/original_psw"
            android:textColor="#777777"
            android:textSize="@dimen/sp_12" />

        <com.hjq.widget.view.PasswordEditText
            android:id="@+id/et_original_psw"
            style="@style/EditTextStyle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_10"
            android:hint="@string/original_psw_hint"
            android:maxLength="20"

            android:singleLine="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginBottom="7dp"
            android:text="@string/new_psw"
            android:textColor="#777777"
            android:textSize="@dimen/sp_12" />

        <com.hjq.widget.view.PasswordEditText
            android:id="@+id/et_new_psw"
            style="@style/EditTextStyle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_10"
            android:hint="@string/register_password_hint1"
            android:maxLength="20"
            android:singleLine="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginBottom="7dp"
            android:text="@string/new_psw_again"
            android:textColor="#777777"
            android:textSize="@dimen/sp_12" />

        <com.hjq.widget.view.PasswordEditText
            android:id="@+id/et_new_psw_again"
            style="@style/EditTextStyle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="#F2F2F2"
            android:hint="@string/register_password_hint2"
            android:maxLength="20"
            android:singleLine="true" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm_to_modify"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginVertical="30dp"
        android:text="@string/confirm_to_modify" />

</LinearLayout>