<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.InfoManageActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/user_info_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_info_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_info_manage_btn"
            android:text="@string/information_editing"
            android:textColor="@drawable/textcolor_bottom_main"
            android:textSize="@dimen/sp_14" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_change_pws"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_info_manage_btn"
            android:text="@string/change_password"
            android:textColor="@drawable/textcolor_bottom_main"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/mainViewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>